--- a/src/Container_Components/GamesContainer/GamesContainer.css
+++ b/src/Container_Components/GamesContainer/GamesContainer.css
@@ -1,18 +1,16 @@
 .main-line {
-    width: 30%;
-    margin-right: 650px;
+  width: 30%;
+  margin-right: 650px;
 }
 
 .game-display {
-    padding-left: 280px;
-    background-color: #1A1a1d;
-    width: 165vh;
-    overflow-x: hidden
-    
-   
+  padding-left: 280px;
+  background-color: #1a1a1d;
+  overflow-x: hidden;
+  height: 100vh;
 }
 
 .flex {
-    display: flex;
-    flex: right;
+  display: flex;
+  flex: right;
 }
